--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 <div class="outer">
-  <img src="/cvr.jpg">
+  <img src="/cvr.JPG">
     <div class="inner">
         <h2>Summer '17</h2>
      </div>  <!--/inner -->
