--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 
 
 
-<body>
+<body background="cvr.jpg">
 <div class="outer">
-  <img src="/cvr.JPG">
     <div class="inner">
         <h2>Summer '17</h2>
      </div>  <!--/inner -->
