--- a/index.html
+++ b/index.html
@@ -13,12 +13,8 @@
 
 
 
-<body background="cvr.jpg">
-<div class="outer">
-    <div class="inner">
-        <h2>Summer '17</h2>
-     </div>  <!--/inner -->
-</div> <!--/outer -->
+<body background="cvr.JPG">
+
 
 
 </body>
